# VectorLibrary

./: .gitignore  CMakeLists.txt  Makefile.mak  README.md
cmake/: VectorLibraryConfig.cmake  cmake_uninstall.cmake.in
script/: vector_gen.bat  vector_gen.py  vector_gen.sh
src/: vector.c  vector.h  vector_allocator.c  vector_allocator.h  vector_config.h  vector_error.h  vector_range.h  vector_size.h
src/priv/: dynamic_vector_template.c  dynamic_vector_template.h  static_vector_template.c  static_vector_template.h  vector_template.c  vector_template.h
src/vec/: template.h  vector_initialize_type.h  vector_template.c  vector_template.h
